@@ -1,10 +1,35 @@
+/*
+ * Copyright (c) 2005-2007, The haXe Project Contributors
+ * All rights reserved.
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions are met:
+ *
+ *   - Redistributions of source code must retain the above copyright
+ *     notice, this list of conditions and the following disclaimer.
+ *   - Redistributions in binary form must reproduce the above copyright
+ *     notice, this list of conditions and the following disclaimer in the
+ *     documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE HAXE PROJECT CONTRIBUTORS "AS IS" AND ANY
+ * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL THE HAXE PROJECT CONTRIBUTORS BE LIABLE FOR
+ * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+ * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+ * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+ * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+ * DAMAGE.
+ */
 package flash;
 
 import flash.events.MouseEvent;
+import flash.events.EventDispatcher;
 
 typedef MEvent = Event<MouseEvent,flash.display.InteractiveObject>;
 
-class Event<T,Target : flash.events.EventDispatcher> {
+class Event<T,Target : EventDispatcher> {
 
 	var name : String;
 	var onAdd : Target -> Void;
@@ -58,6 +83,7 @@ class Event<T,Target : flash.events.EventDispatcher> {
 	public static var move = new MEvent(MouseEvent.MOUSE_MOVE,mouseEnable);
 
 	public static function drag( t : flash.display.InteractiveObject, f : Void -> Void ) {
+		#if flash9
 		var stage = flash.Lib.current.stage;
 		var mouseX = stage.mouseX;
 		var mouseY = stage.mouseY;
@@ -71,10 +97,11 @@ class Event<T,Target : flash.events.EventDispatcher> {
 		var stop;
 		stop = function(e) {
 			t.removeEventListener(flash.events.Event.ENTER_FRAME,fevent);
-			stage.removeEventListener(flash.events.MouseEvent.MOUSE_UP,stop);
+			stage.removeEventListener(MouseEvent.MOUSE_UP,stop);
 		};
 		t.addEventListener(flash.events.Event.ENTER_FRAME,fevent);
-		stage.addEventListener(flash.events.MouseEvent.MOUSE_UP,stop);
+		stage.addEventListener(MouseEvent.MOUSE_UP,stop);
+		#end
 	}
 
 }
