@@ -9,6 +9,8 @@
 	added flash.Event for Flash9
 	added --no-output
 	fixed neko.net.Socket peer and host methods
+	added neko.io.Process and neko.vm.Ui
+	added haxe.xml.Proxy
 
 2007-05-18: 1.13
 	fixed bug with local variable masking package in catch type
